<resources>
    <string name="app_name">Flashy</string>
    <string name="login_success">login success</string>
    <string name="login">LOGIN</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="go">GO</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="next">NEXT</string>
    <string name="register">REGISTER</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <array name="lessons">
        <item>Dummy 1</item>
        <item>Dummy 2</item>
        <item>Dummy 3</item>
        <item>Dummy 4</item>
        <item>Dummy 1</item>
        <item>Dummy 2</item>
        <item>Dummy 3</item>
        <item>Dummy 4</item>
        <item>Dummy 1</item>
        <item>Dummy 2</item>
        <item>Dummy 3</item>
        <item>Dummy 4</item>
        <item>Dummy 1</item>
        <item>Dummy 2</item>
        <item>Dummy 3</item>
        <item>Dummy 4</item>
        <item>Dummy 1</item>
        <item>Dummy 2</item>
        <item>Dummy 3</item>
        <item>Dummy 4</item>
        <item>Dummy 1</item>
        <item>Dummy 2</item>
        <item>Dummy 3</item>
        <item>Dummy 4</item>
        <item>Dummy 1</item>
        <item>Dummy 2</item>
        <item>Dummy 3</item>
        <item>Dummy 4</item>
        <item>Dummy 1</item>
        <item>Dummy 2</item>
        <item>Dummy 3</item>
        <item>Dummy 4</item>
    </array>
    <string name="title_activity_cheat_sheet">Cheat Sheet</string>
    <string name="large_text">
        "<b>1.</b> A sigma bond is created when two s orbitals overlap, when an s orbital overlaps with a p orbital, or when two p orbitals overlap \"head-on\".\n\n"
        "<b>2.</b> A pi bond is created when two p orbitals overlap \"sideways-on\". The overlap now occurs above and below the line drawn through the two nuclei.\n\n"
        "<b>3.</b> In single bond, only sigma are present.Double bond: one sigma and one pi.Triple bond: one sigma and two pi.\n"
    </string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
