<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_holder"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="fla"
            android:fontFamily="sans-serif-light"
            android:textSize="36sp"
            android:textColor="@android:color/white"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="-10dp"
            android:paddingRight="-10dp"
            android:src="@mipmap/ic_logo"
            android:tint="@color/colorYellow"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="hy"
            android:fontFamily="sans-serif-light"
            android:textSize="36sp"
            android:textColor="@android:color/white"/>
    </LinearLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/login_holder"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardCornerRadius="6dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <View
                    android:layout_width="8dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:background="@color/colorAccent" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="20dp"
                    android:text="@string/login"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:paddingLeft="30dp"
                android:paddingRight="30dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorSecondaryText">

                    <EditText
                        android:id="@+id/login_username_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_bg_edit"
                        android:hint="@string/Username"
                        android:fontFamily="sans-serif-condensed"
                        android:inputType="textPersonName"
                        android:paddingBottom="2dp"
                        android:textColor="@color/colorAccent"
                        android:textCursorDrawable="@drawable/bg_input_cursor" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp"
                android:paddingRight="30dp"
                android:paddingLeft="30dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorSecondaryText">

                    <EditText
                        android:id="@+id/login_password_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_bg_edit"
                        android:hint="@string/Password"
                        android:fontFamily="sans-serif-condensed"
                        android:inputType="textPassword"
                        android:paddingBottom="2dp"
                        android:textColor="@color/colorAccent" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

                <Button
                    android:id="@+id/login_btn"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bt_shape"
                    android:text="@string/go"
                    android:textColor="@color/colorSecondaryText"
                    android:layout_margin="10dp"/>

            <TextView
                android:id="@+id/login_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:text="@string/forgot_your_password"
                android:textColor="@color/colorSecondaryText"
                android:textSize="12sp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/register_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/login_holder"
        android:layout_alignTop="@id/login_holder"
        android:layout_marginRight="-20dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/ic_add_white_48dp"
        android:transitionName="loginFab"
        app:fabSize="normal" />

</RelativeLayout>
